test/successor_ml/should_not_compile/record_extension_pattern_2.sml
fun foo { a, b, ... = x } = x = { a = 42 };
foo { a = 42, b = "" };
